# Python-Natural-Language-Processing-Cookbook-Second-Edition

./: LICENSE  README.md  pyproject.toml  requirements.txt
Chapter01/: Dividing text into sentences (1.1).ipynb  dividing_sentences_into_words_1.2.ipynb  dividing_text_into_sentences_1.1.ipynb  lemmatization_1.4.ipynb  part_of_speech_tagging_1.3.ipynb  removing_stopwords_1.5.ipynb
Chapter02/: counting_nouns_2.1.ipynb  dependency_parse_2.2.ipynb  entities_and_relations_2.6.ipynb  finding_patterns_in_text_2.5.ipynb  noun_chunks_2.3.ipynb  subjects_objects_2.4.ipynb
Chapter03/: 3.1_simple_classifier.ipynb  3.2_bag_of_words.ipynb  3.3_n_grams.ipynb  3.4_tf_idf.ipynb  3.5_word_embeddings.ipynb  3.6_train_own_word2vec.ipynb  3.7_bert_embeddings.ipynb  3.8_openai_embeddings.ipynb  3.9_vector_search.ipynb
Chapter04/: 4.1_data_preparation.ipynb  4.2_rule_based.ipynb  4.3_unsupervised_classification.ipynb  4.4-svm_classification.ipynb  4.5-spacy_textcat.ipynb  4.6_openai_classification.ipynb
Chapter05/: 5.1_regex.ipynb  5.2_similar_strings.ipynb  5.3_keyword_extraction.ipynb  5.4_named_entity_extraction.ipynb  5.5_training_own_spacy_model.ipynb  5.6_fine_tune_bert.ipynb
Chapter06/: 6.1_topic_modeling_gensim.ipynb  6.2_community_detection.ipynb  6.3-kmeans_with_bert.ipynb  6.4-berttopic.ipynb  6.5-contextualized-tm.ipynb
Chapter07/: 7.1_dependency_parse.ipynb  7.2_parts_of_speech.ipynb  7.3_ner.ipynb  7.4_confusion_matrix.ipynb  7.5_word_clouds.ipynb  7.6_topics_gensim.ipynb
Chapter08/: 8.1_Transformers_dataset.ipynb  8.2_Basic_Tokenization.ipynb  8.3_Classification_And_Evaluation.ipynb  8.4_Zero_shot_classification.ipynb  8.5_Transformer_text_generation.ipynb  8.6_Language_Translation_with_transformers.ipynb  pyproject.toml  requirements.txt
Chapter09/: 9.1_question_answering.ipynb  9.2_QA_on_long_passages.ipynb  9.3_QA_on_document_corpus.ipynb  9.4_abstractive_qa_on_document_corpus.ipynb  9.5_summarization.ipynb  9.6_textual_entailment.ipynb  9.7_explanability_via_classifier.ipynb  9.8_explanability_via_generation.ipynb  pyproject.toml  requirements.txt
Chapter10/: 10.1_run_basic_llm.ipynb  10.2_instruct_llm.ipynb  10.3_langchain_prompt_with_llm.ipynb  10.4_rag_with_llm.ipynb  10.5_chatbot_with_llm.ipynb  10.6_code_generation_with_llm.ipynb  10.7_generation_and_execute_sql_via_llm.ipynb  10.8_agents_with_llm.ipynb  pyproject.toml  requirements.txt
Saurabh/: Gen_AI_and_LLMs.ipynb  NLU + XAI.ipynb  NLU.ipynb  XAI.ipynb
data/: IMDB-Movie-Data.json  bbc_test.json  lda-gensim.html  music_ner.csv  music_ner_bio.bio  ner_vis.html  spacy_config.cfg  spacy_config_ner.cfg
util/: file_utils.ipynb  lang_utils.ipynb  util_simple_classifier.ipynb
