[tool.poetry]
name = "book-2nd-ed"
version = "0.1.0"
description = "\"Second edition of Python NLP Cookbook\""
authors = ["zhenya-pl <zhenya@practicallinguist.com>"]
readme = "README.md"
packages = [{include = "book_2nd_ed"}]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
nltk = "^3.8.1"
spacy = "^3.5.3"
openai = "^0.27.7"
transformers = "^4.29.2"
spacy-experimental = "^0.6.2"
thinc = "^8.1.10"
textblob = "^0.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
