[tool.poetry]
name = "book-2nd-ed"
version = "0.1.0"
description = "\"Second edition of Python NLP Cookbook\""
authors = ["zhenya-pl <zhenya@practicallinguist.com>"]
readme = "README.md"
#packages = [{include = "book_2nd_ed"}]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
nltk = "^3.8.1"
openai = "^0.27.7"
transformers = "^4.38.0"
spacy-experimental = "^0.6.2"
thinc = "^8.1.10"
textblob = "^0.17.1"
datasets = "^2.13.1"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
numpy = "1.24.4"
gensim = "^4.3.1"
sentence-transformers = "^2.2.2"
torch = ">=2.0.0, !=2.0.1"
llama-index = "^0.7.8"
langdetect = "^1.0.9"
spacy = "^3.6.1"
evaluate = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
