[tool.poetry]
name = "book-2nd-ed"
version = "0.1.0"
description = "\"Second edition of Python NLP Cookbook\""
authors = ["zhenya-pl <zhenya@practicallinguist.com>"]
readme = "README.md"
#packages = [{include = "book_2nd_ed"}]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
nltk = "^3.8.1"
openai = "^1.35.10"
transformers = "^4.29.2"
spacy-experimental = "^0.6.2"
thinc = "^8.1.10"
textblob = "^0.17.1"
datasets = "^2.13.1"
pandas = "^2.0.3"
scikit-learn = "^1.5.0"
numpy = "1.24.4"
#gensim = "^4.3.1"
gensim = "4.2.0"
sentence-transformers = "^2.2.2"
torch = ">=2.0.0, !=2.0.1"
llama-index = "^0.7.8"
langdetect = "^1.0.9"
spacy = "^3.6.1"
evaluate = "^0.4.0"
levenshtein = "^0.22.0"
seqeval = "^1.2.2"
matplotlib = "^3.8.0"
accelerate = "^0.24.0"
python-dev-tools = "^2023.3.24"
hdbscan = "^0.8.33"
bertopic = "^0.16.0"
contextualized-topic-models = "^2.5.0"
pyldavis = "^3.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
